--- a/MasterPage.master
+++ b/MasterPage.master
@@ -7,22 +7,40 @@
     <%-- include twitter bootstrap --%>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="Assets/Default/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="Assets/Default/css/bootstrap-glyphicons.css" rel="stylesheet" />
     <script src="Assets/Default/jQuery/jquery-1.10.2.min.js"></script>
     <script src="Assets/Default/js/bootstrap.min.js"></script>
 
     <title>
-        <asp:ContentPlaceHolder id="title" runat="server">
-    </asp:ContentPlaceHolder>s
+        <asp:ContentPlaceHolder ID="title" runat="server">
+        </asp:ContentPlaceHolder>
     </title>
-    
+
 </head>
 <body>
-    <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
-        </asp:ContentPlaceHolder>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container" style="width: 1170px">
+                <a class="brand" href="Default.aspx">Warehouse Management</a>
+                <ul class="nav pull-right" id="main-menu-right">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            <span class="glyphicon glyphicon-user"></span>
+                            Hello User
+                            <b class="caret"></b>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="#">Edit Profile</a>
+                                </li>
+                                <li>
+                                    <a href="#">Logout</a>
+                                </li>
+                            </ul>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    </form>
 </body>
 </html>
