--- a/MasterPage.master
+++ b/MasterPage.master
@@ -1,5 +1,7 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
 
+<%@ Register src="Template/Navbar.ascx" tagname="Navbar" tagprefix="utmpl" %>
+
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -18,29 +20,6 @@
 
 </head>
 <body>
-    <div class="navbar">
-        <div class="navbar-inner">
-            <div class="container" style="width: 1170px">
-                <a class="brand" href="Default.aspx">Warehouse Management</a>
-                <ul class="nav pull-right" id="main-menu-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <span class="glyphicon glyphicon-user"></span>
-                            Hello User
-                            <b class="caret"></b>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">Edit Profile</a>
-                                </li>
-                                <li>
-                                    <a href="#">Logout</a>
-                                </li>
-                            </ul>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
+        <utmpl:Navbar ID="Navbar" runat="server" />
 </body>
 </html>
