--- a/MasterPage.master
+++ b/MasterPage.master
@@ -2,18 +2,14 @@
 
 <%@ Register Src="TemplateControls/Navbar.ascx" TagName="Navbar" TagPrefix="utmpl" %>
 <%@ Register Src="TemplateControls/SideBar.ascx" TagPrefix="utmpl" TagName="SideBar" %>
-
+<%@ Register Src="/TemplateControls/Style.ascx" TagPrefix="utmpl" TagName="Style" %>
 
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
-    <%-- include twitter bootstrap --%>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/Assets/Default/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/Assets/Default/css/bootstrap-glyphicons.css" rel="stylesheet" />
-    <script src="/Assets/Default/jQuery/jquery-1.10.2.min.js"></script>
-    <script src="/Assets/Default/js/bootstrap.min.js"></script>
+    <%-- include css and js file --%>
+    <utmpl:Style runat="server" ID="Style" />
 
     <title>
         <asp:ContentPlaceHolder ID="Title" runat="server">
@@ -21,7 +17,7 @@
     </title>
 
 </head>
-<body style="background-color: #eee;">
+<body>
     <utmpl:Navbar ID="Navbar" runat="server" />
 
     <div class="container">
